--- a/jparsec-examples/pom.xml
+++ b/jparsec-examples/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.jparsec</groupId>
+    <groupId>com.movesol</groupId>
     <artifactId>jparsec-root</artifactId>
     <version>2.3</version>
     <relativePath>../pom.xml</relativePath>
@@ -14,12 +14,12 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.jparsec</groupId>
+      <groupId>com.movesol</groupId>
       <artifactId>jparsec</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.jparsec</groupId>
+      <groupId>com.movesol</groupId>
       <artifactId>jparsec-testutils</artifactId>
     </dependency>
 
