--- a/jparsec-workshop/pom.xml
+++ b/jparsec-workshop/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.jparsec</groupId>
+  <groupId>com.movesol</groupId>
   <version>2.2-SNAPSHOT</version>
   <artifactId>jparsec-workshop</artifactId>
 
   <dependencies>
     
     <dependency>
-      <groupId>org.jparsec</groupId>
+      <groupId>com.movesol</groupId>
       <artifactId>jparsec</artifactId>
       <version>2.2-SNAPSHOT</version>
     </dependency>
