--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jparsec</groupId>
+  <groupId>com.movesol</groupId>
   <artifactId>jparsec-root</artifactId>
   <packaging>pom</packaging>
   <version>2.3</version>
@@ -70,13 +70,13 @@
     <dependencies>
 
       <dependency>
-        <groupId>org.jparsec</groupId>
+        <groupId>com.movesol</groupId>
         <artifactId>jparsec</artifactId>
         <version>${project.version}</version>
       </dependency>
 
       <dependency>
-        <groupId>org.jparsec</groupId>
+        <groupId>com.movesol</groupId>
         <artifactId>jparsec-testutils</artifactId>
         <version>${project.version}</version>
         <scope>test</scope>
