--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.movesol</groupId>
   <artifactId>jparsec-root</artifactId>
   <packaging>pom</packaging>
-  <version>3.0.11</version>
+  <version>3.0.11-movesol-1.1.0</version>
 
   <name>jParsec Root</name>
 
@@ -16,12 +16,12 @@
   <distributionManagement>
     <repository>
       <id>sonatype</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <url>https://nexus.movesol.net/repository/releases</url>
     </repository>
     <snapshotRepository>
       <id>ossrh</id>
       <name>Sonatype Nexus snapshot repository</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+      <url>https://nexus.movesol.net/repository/dev</url>
     </snapshotRepository>
   </distributionManagement>
 
