Return value type change for recover

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.movesol</groupId>
   <artifactId>jparsec-root</artifactId>
   <packaging>pom</packaging>
-  <version>3.0.11-movesol-1.1.0</version>
+  <version>3.0.11-movesol-1.1.1</version>
 
   <name>jParsec Root</name>
 
@@ -36,7 +36,7 @@
     <url>http://github.com/jparsec/jparsec</url>
     <connection>scm:git:git@github.com:jparsec/jparsec.git</connection>
     <developerConnection>scm:git:git@github.com:jparsec/jparsec.git</developerConnection>
-    <tag>jparsec-root-2.3</tag>
+    <tag>jparsec-root-3.0.11-movesol-1.1.1</tag>
   </scm>
 
   <developers>
